# oa-brain

./: README.md
DjangoOfficeProject/: README.md  api.md  pyproject.toml
DjangoOfficeProject/DjangoOfficeProject/: settings.py  urls.py
DjangoOfficeProject/apps/officeAuth/: authentications.py  models.py
DjangoOfficeProject/apps/officeAuth/migrations/: 0001_initial.py
FastAPIAgentService/: .env.example  .gitignore  README.md  api.json  api.md  pyproject.toml
FastAPIAgentService/.trae/documents/: check_list.md  multi_agent_architecture_plan.md  tasks.md
FastAPIAgentService/app/: config.py
FastAPIAgentService/app/agent/: __init__.py  agent.py  agent_middleware.py  agent_router.py  base.py  knowledge_agent.py  main_agent.py  memory_agent.py  param_extraction_agent.py  task_decomposer.py  tool_agent.py  workflow.py
FastAPIAgentService/app/db/: db_config.py
FastAPIAgentService/app/prompt/: main_prompt.txt  tool_agent_prompt.txt
FastAPIAgentService/app/router/: chat.py  chat_service.py
FastAPIAgentService/app/schemas/: oa_schemas.py  rag_schemas.py
FastAPIAgentService/app/tools/: oa_tools.py  rag_tools.py
FastAPIAgentService/data/md5_hex_store/: md5_hex_store.txt
FastAPIAgentService/tests/: conftest.py  test_agents.py  test_api.py  test_param_extraction.py  test_tools.py
oa-vue-project/: README.md  openapi.json  package-lock.json  package.json
oa-vue-project/src/: App.vue
oa-vue-project/src/components/: AIChatWindow.vue  GlobalFloatingBall.vue
oa-vue-project/src/router/: index.js
oa-vue-project/src/views/ai/: chat.vue
(+1 files in other folders)
